# OpenCL-Trial

./: .gitignore  CMakeLists.txt  readme.md
OpenGL-Trial/: .gitignore  BuildUtilities.cmake  CMakeLists.txt  README.md
OpenGL-Trial/common/: CMakeLists.txt  Camera.hpp  CommonUtils.cpp  CommonUtils.hpp  GameTimer.hpp  ImageIO.hpp  ShaderProgram.cpp  ShaderProgram.hpp
OpenGL-Trial/demos/: CMakeLists.txt
OpenGL-Trial/demos/blinn/: CMakeLists.txt  blinn.cpp
OpenGL-Trial/demos/blinn/shaders/: blinn.fs  blinn.vs
OpenGL-Trial/demos/cube_envmap/: CMakeLists.txt  cube_envmap.cpp
OpenGL-Trial/demos/cube_envmap/shaders/: env_reflect.fs  env_reflect.vs  skybox.fs
OpenGL-Trial/demos/helloworld/: CMakeLists.txt  helloworld.cpp
OpenGL-Trial/demos/helloworld/shaders/: basic.fs  basic.vs
OpenGL-Trial/demos/lighting/: CMakeLists.txt  lighting.cpp
OpenGL-Trial/demos/lighting/shaders/: light_source.fs  lighting.fs  lighting.vs
OpenGL-Trial/demos/load-model/: CMakeLists.txt  load-model.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
OpenGL-Trial/demos/load-model/shaders/: color.fs  color.vs
OpenGL-Trial/demos/normal-map/: CMakeLists.txt  normal-map.cpp
OpenGL-Trial/demos/normal-map/shaders/: normal-map.fs  normal-map.vs
OpenGL-Trial/demos/parallax-map/: CMakeLists.txt  parallax-map.cpp
OpenGL-Trial/demos/parallax-map/shaders/: parallax-map.fs  parallax-map.tesc  parallax-map.tese  parallax-map.vs
OpenGL-Trial/demos/pbr-lighting/: CMakeLists.txt  equivrectangle_hdr_image_to_cube_images.cpp  pbr-lighting.cpp
OpenGL-Trial/demos/pbr-lighting/pbr/: pbr_pre_compute.cpp  pbr_pre_compute.hpp
OpenGL-Trial/demos/pbr-lighting/pbr/shaders/: diffuse_irrmap.comp  specular_brdf.comp  specular_irrmap.comp
OpenGL-Trial/demos/pbr-lighting/shaders/: equivrectangle_to_cubemap.comp  pbr-lighting.fs  pbr-lighting.vs  skybox.fs  skybox.vs
OpenGL-Trial/demos/skeletal-animation/: CMakeLists.txt  animation.h  animator.h  assimp_glm_helpers.hpp  bone.h  material.cpp  skeletal-animation.cpp  skm_mesh.cpp  skm_mesh.hpp  skm_model.cpp  skm_model.hpp
OpenGL-Trial/demos/skeletal-animation/shaders/: blend-animation.fs  blend-animation.vs
OpenGL-Trial/demos/stencil/: CMakeLists.txt  stencil.cpp
OpenGL-Trial/demos/stencil/shaders/: color.fs  color.vs  draw_stencil.fs  draw_stencil.vs  gauss_blur.vs  gauss_blur_x.fs  gauss_blur_y.fs  merge_color.fs
Vk-Trial/: CMakeLists.txt
Vk-Trial/Common/: CMakeLists.txt  VkTexture.cpp  VulkanRenderContext.cpp  utilities.h
Vk-Trial/VkHelloWorld/: CMakeLists.txt  Cube.cpp
Vk-Trial/VkHelloWorld/shaders/: box.hlsl
cmake/: BuildUtilities.cmake
common/: CMakeLists.txt  cl_utils.cpp  cl_utils.h  common.cl.h  common_miscs.cpp  common_miscs.h  glx_shader_program.cpp  glx_shader_program.hpp  glx_utils.cpp  glx_utils.hpp
docx/: CPU-GPU-Memory-Optimization-Node.md  GPGPU-Optimization-Note.md  GPU-Architecture-Note.md  GPU-Test-Report.md
gpu_profile/: CMakeLists.txt  main.cpp
heat_transfer/: CMakeLists.txt  heat_transfer.cl  main.cpp
heat_transfer/shaders/: color.fs  color.vs
hello_world/: CMakeLists.txt  cpu_gpu_memory_models.md  main.cpp  simple.cl
matrix/: CMakeLists.txt  main.cpp  mat_mul_vec.cl  matrix.cl
pixels_histogram/: CMakeLists.txt  histo.cl  main.cpp
sparse_matrix/: CMakeLists.txt  main.cpp  sparse_matrix.cl
transpose_inplace/: CMakeLists.txt  decomposition_tr.cpp  decomposition_tr.h  gcd.h  index.h  main.cpp  native_transpose.cpp  native_transpose.h  openmp_transpose.cpp  openmp_transpose.h  page_allocator.cpp  page_allocator.h  reduced_math.cpp  reduced_math.h
transpose_inplace/int128/: int128.h  int128IO.cpp  int128x64_.asm  uint128x64_.asm
tridiagonal/: CMakeLists.txt  config.cl.h  cpu_serial.cpp  cpu_serial.h  cr_kernels.cl  cr_pcr_hybrid_kernels.cl  main.cpp  pcr_kernels.cl  test_cases.h  tridiagonal_mat.h
vector_dot/: CMakeLists.txt  main.cpp  vector_dot.cl
